# roadmapTool

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  pyproject.toml  roadmap.yaml
.claude/: settings.local.json
docs/plans/: 2026-03-05-overdue-detection-design.md  2026-03-05-overdue-detection.md  2026-03-05-task-hover-popover-design.md  2026-03-05-task-hover-popover.md  2026-03-05-task-tags-design.md  2026-03-05-task-tags.md  2026-03-06-collapse-expand-all-design.md  2026-03-06-collapse-expand-all.md
src/roadmaptool/: api.py  main.py  models.py  parser.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_models.py  test_parser.py
